src/test/ui/macros/span-covering-argument-1.nll.stderr
error[E0596]: cannot borrow immutable item `foo` as mutable
  --> $DIR/span-covering-argument-1.rs:15:14
   |
LL |             let $s = 0;
   |                 -- help: consider changing this to be mutable: `mut foo`
LL |             *&mut $s = 0;
   |              ^^^^^^^ cannot borrow as mutable
...
LL |     bad!(foo whatever);
   |     ------------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
